--- a/Languages/Japanese/Keyed/Alerts.xml
+++ b/Languages/Japanese/Keyed/Alerts.xml
@@ -14,13 +14,16 @@
   <AlertHiddenEnemiesLabel>隠れた敵を表示します.戦場の霧がかかった地域にいる敵や,透明化しているサイトスティーラーも含まれます.</AlertHiddenEnemiesLabel>
 
   <AlertEnemyNeedsRescue>救助が必要な敵</AlertEnemyNeedsRescue>
-  <AlertEnemyNeedsRescueDesc>無力化された敵です。囚人にしたり、衣服を脱がせたり、トドメを刺したりできます:\n\n{0}</AlertEnemyNeedsRescueDesc>
+  <AlertEnemyNeedsRescueDesc>無力化された敵です.囚人にしたり,衣服を脱がせたり,トドメを刺したりできます:\n\n{0}</AlertEnemyNeedsRescueDesc>
+
+  <AlertEntityDowned>無力化された存在</AlertEntityDowned>
+  <AlertEntityDownedDesc>これらのAnomalyDLCの存在は,無力化されています.捕獲するか,仕留めることができます.\n\n{0}</AlertEntityDownedDesc>
 
   <AlertAllyNeedsRescue>救助が必要な同盟者</AlertAllyNeedsRescue>
-  <AlertAllyNeedsRescueDesc>無力化された味方です。彼らを救助したほうがいいかもしれません。:\n\n{0}</AlertAllyNeedsRescueDesc>
+  <AlertAllyNeedsRescueDesc>無力化された味方です.彼らを救助したほうがいいかもしれません.:\n\n{0}</AlertAllyNeedsRescueDesc>
 
   <AlertNeutralNeedsRescue>救助が必要な人</AlertNeutralNeedsRescue>
-  <AlertNeutralNeedsRescueDesc>派閥に属していない無力化された人です。あなたは救出するか捕らえることもできます:\n\n{0}</AlertNeutralNeedsRescueDesc>
+  <AlertNeutralNeedsRescueDesc>派閥に属していない無力化された人です.あなたは救出するか捕らえることもできます:\n\n{0}</AlertNeutralNeedsRescueDesc>
 
   <AlertBlight>疫病</AlertBlight>
   <AlertBlightDesc>これらの作物に疫病が蔓延する前に,疫病に冒された作物を,刈り取るか焼却するべきです.</AlertBlightDesc>
@@ -30,58 +33,57 @@
   <ExtraAlerts_Mood>心情</ExtraAlerts_Mood>
 
   <AlertNotBondedAnimalMaster>動物(絆)の主人が違う</AlertNotBondedAnimalMaster>
-  <AlertNotBondedAnimalMasterDesc>絆で結ばれた主人に動物が割り当てられていません。</AlertNotBondedAnimalMasterDesc>
+  <AlertNotBondedAnimalMasterDesc>絆で結ばれた主人に動物が割り当てられていません.</AlertNotBondedAnimalMasterDesc>
 
   <AlertDeadMansApparel>汚れた衣服を着用</AlertDeadMansApparel>
-  <AlertDeadMansApparelDesc>これらの入植者たちは死人が着ていた服を着ているので、心情が悪化しています：\n\n{0}\n清潔な服を着せてください。</AlertDeadMansApparelDesc>
+  <AlertDeadMansApparelDesc>これらの入植者たちは死人が着ていた服を着ているので,心情が悪化しています：\n\n{0}\n清潔な服を着せてください.</AlertDeadMansApparelDesc>
 
   <AlertHumanLeatherApparelSad>人の皮製品で不幸</AlertHumanLeatherApparelSad>
-  <AlertHumanLeatherApparelSadDesc>これらの入植者たちは人間の皮で出来た衣服を身に着けているので、不幸を感じています:\n\n{0}\n他の素材で作られた衣服を着せてください。</AlertHumanLeatherApparelSadDesc>
+  <AlertHumanLeatherApparelSadDesc>これらの入植者たちは人間の皮で出来た衣服を身に着けているので,不幸を感じています:\n\n{0}\n他の素材で作られた衣服を着せてください.</AlertHumanLeatherApparelSadDesc>
 
   <AlertWantToSleepWith>恋人が別々なベッド</AlertWantToSleepWith>
-  <AlertWantToSleepWithDesc>これらの入植者たちは恋人と一緒に寝たいと思っています。ダブルベッドを割り当てることを検討してください。</AlertWantToSleepWithDesc>
+  <AlertWantToSleepWithDesc>これらの入植者たちは恋人と一緒に寝たいと思っています.ダブルベッドを割り当てることを検討してください.</AlertWantToSleepWithDesc>
 
   <AlertSharingBedUnhappy>他人とベッドを共有</AlertSharingBedUnhappy>
-  <AlertSharingBedUnhappyDesc>これらの入植者たちは恋人でも無いのにベッドを共有しています。彼らを別々のベッドに割り当てることを検討してください。</AlertSharingBedUnhappyDesc>
+  <AlertSharingBedUnhappyDesc>これらの入植者たちは恋人でも無いのにベッドを共有しています.彼らを別々のベッドに割り当てることを検討してください.</AlertSharingBedUnhappyDesc>
 
   <AlertAsceticBedroomQuality>禁欲者に良い部屋</AlertAsceticBedroomQuality>
-  <AlertAsceticBedroomQualityDesc>禁欲の特徴を持つ入植者は自分の寝室があまりにも豪華な事に不満を抱いています。美しさを取り除くか、より評価が悪い寝室へ割り当てることを検討してください。</AlertAsceticBedroomQualityDesc>
+  <AlertAsceticBedroomQualityDesc>禁欲の特徴を持つ入植者は自分の寝室があまりにも豪華な事に不満を抱いています.美しさを取り除くか,より評価が悪い寝室へ割り当てることを検討してください.</AlertAsceticBedroomQualityDesc>
 
   <AlertNightOwl>陽の下のよたか</AlertNightOwl>
-  <AlertNightOwlDesc>よたかの人が昼間働く事になっています、夜勤にしてください。</AlertNightOwlDesc>
-
+  <AlertNightOwlDesc>よたかの人が昼間働く事になっています,夜勤にしてください.</AlertNightOwlDesc>
 
   <!-- Animals -->
   <ExtraAlerts_Animals>動物</ExtraAlerts_Animals>
 
   <AlertAnimalHypothermia>動物が低体温症</AlertAnimalHypothermia>
-  <AlertAnimalHypothermiaDesc>これらのコロニーの動物たちは低体温症です。</AlertAnimalHypothermiaDesc>
+  <AlertAnimalHypothermiaDesc>これらのコロニーの動物たちは低体温症です.</AlertAnimalHypothermiaDesc>
 
   <AlertAnimalHeatstroke>動物が熱中症</AlertAnimalHeatstroke>
-  <AlertAnimalHeatstrokeDesc>これらのコロニーの動物たちは熱中症です。</AlertAnimalHeatstrokeDesc>
+  <AlertAnimalHeatstrokeDesc>これらのコロニーの動物たちは熱中症です.</AlertAnimalHeatstrokeDesc>
 
   <AlertAnimalGoingWild>動物が飼いならし不足</AlertAnimalGoingWild>
-  <AlertAnimalGoingWildDesc>これらのコロニーの動物たちはすぐに野生化します。</AlertAnimalGoingWildDesc>
+  <AlertAnimalGoingWildDesc>これらのコロニーの動物たちはすぐに野生化します.</AlertAnimalGoingWildDesc>
 
   <AlertHandlerNeeded>調教師が必要</AlertHandlerNeeded>
-  <AlertHandlerNeededDesc>入植者が調教の訓練をできない動物がいます。野生に戻る前に屠殺するか売却を検討してください。</AlertHandlerNeededDesc>
+  <AlertHandlerNeededDesc>入植者が調教の訓練をできない動物がいます.野生に戻る前に屠殺するか売却を検討してください.</AlertHandlerNeededDesc>
 
   <!-- Misc -->
   <ExtraAlerts_Misc>その他</ExtraAlerts_Misc>
 
   <AlertPausedCaravan>キャラバンが待機中</AlertPausedCaravan>
-  <AlertPausedCaravanDesc>キャラバン隊の1つがワールドマップ上で一時停止しており、あなたの指示を待っている可能性があります。</AlertPausedCaravanDesc>
+  <AlertPausedCaravanDesc>キャラバン隊の1つがワールドマップ上で一時停止しており,あなたの指示を待っている可能性があります.</AlertPausedCaravanDesc>
 
   <AlertUnroofedElectrical>屋根がない電気製品</AlertUnroofedElectrical>
-  <AlertUnroofedElectricalDesc>これらの建築物には屋根がなく、雨が降るとショートします。</AlertUnroofedElectricalDesc>
+  <AlertUnroofedElectricalDesc>これらの建築物には屋根がなく,雨が降るとショートします.</AlertUnroofedElectricalDesc>
 
   <AlertTradeCaravan>トレーダー</AlertTradeCaravan>
-  <AlertTradeCaravanDesc>トレーダーが来訪中です。</AlertTradeCaravanDesc>
+  <AlertTradeCaravanDesc>トレーダーが来訪中です.</AlertTradeCaravanDesc>
 
   <AlertOrbitalTrader>軌道トレーダー</AlertOrbitalTrader>
-  <AlertOrbitalTraderDesc>通信可能な軌道上に宇宙トレーダーが来訪中です。</AlertOrbitalTraderDesc>
+  <AlertOrbitalTraderDesc>通信可能な軌道上に宇宙トレーダーが来訪中です.</AlertOrbitalTraderDesc>
 
   <AlertColonistNeedsRest>入植者は休養が必要</AlertColonistNeedsRest>
-  <AlertColonistNeedsRestDesc>この入植者たちは病気なので、ベッドでの休養が必要です。</AlertColonistNeedsRestDesc>
+  <AlertColonistNeedsRestDesc>この入植者たちは病気なので,ベッドでの休養が必要です.</AlertColonistNeedsRestDesc>
 
 </LanguageData>
